WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313212
innerText should not emit newlines for visibility:hidden block elements
https://bugs.webkit.org/show_bug.cgi?id=313212
Summary
innerText should not emit newlines for visibility:hidden block elements
Chris Dumez
Reported
2026-04-23 21:51:04 PDT
innerText should not emit newlines for visibility:hidden block elements
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-23 21:52:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63507
EWS
Comment 2
2026-04-25 00:02:59 PDT
Committed
312010@main
(1fb5ba86b2ce): <
https://commits.webkit.org/312010@main
> Reviewed commits have been landed. Closing PR #63507 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-25 00:03:13 PDT
<
rdar://problem/175569426
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug